Remove uneccessary CSS, align checkout bar to bottom, ensure it overflows with products in body

--- a/client/src/components/CheckoutBar.module.scss
+++ b/client/src/components/CheckoutBar.module.scss
@@ -1,9 +1,8 @@
 .checkoutBar {
-  position: static;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  margin-top: 1rem;
+  align-self: flex-end;
+  margin-top: auto;
   background-color: hsla(0, 0%, 100%, 0.6);
   width: 100%;
   .checkoutButton {
